--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "expo": "^53.0.9",
+    "expo-av": "^15.1.4",
+    "expo-file-system": "^18.1.10",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "lucide-react-native": "latest",
